fix(base): increase z-index of change indicator wrapper on hover so icon is not hidden

--- a/packages/@sanity/base/src/change-indicators/ChangeBar.css
+++ b/packages/@sanity/base/src/change-indicators/ChangeBar.css
@@ -9,6 +9,12 @@
 .root {
   display: flex;
   position: relative;
+
+  @media (hover: hover) {
+    &:hover {
+      z-index: 10;
+    }
+  }
 }
 
 .field {
